[package]
name = "atcoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
pipe = "0.4.0"
proconio = "0.4.3"
reqwest = {version = "0.11.18", features=["json"]}
serde = {version = "1.0.171", features=["derive"]}
serde_json = "1.0.103"
tokio = {version = "1.29.1", features = ["full"]}
